# the-pitchs-edge

./: .env.example  .gitignore  README.md  pyproject.toml  vercel.json
scripts/: backfill_corners.py  backfill_csv.py  backfill_xg.py  backtest.py  backtest_blend_sweep.py  backtest_compare.py  backtest_holdout.py  backtest_min_train_sweep.py  backtest_tune.py  backtest_xg_compare.py  corners_calibration.py  export_web_data.py  fetch_fixtures.py  fetch_odds.py  fit_and_recommend.py  init_db.py  refresh_tuned_backtests.py  run_ui.py  run_web.py
src/pitchs_edge/: config.py  names.py  recommend.py  tuned_configs.py
src/pitchs_edge/backtest/: __init__.py  metrics.py  walkforward.py
src/pitchs_edge/clv/: __init__.py  tracker.py
src/pitchs_edge/db/: __init__.py  connection.py  schema.sql
src/pitchs_edge/edge/: __init__.py  devig.py  kelly.py
src/pitchs_edge/features/: __init__.py
src/pitchs_edge/ingest/: fixtures.py  historical.py  odds.py  xg_understat.py
src/pitchs_edge/models/: __init__.py  adjustments.py  corners.py  dixon_coles.py
src/pitchs_edge/sources/: fbref.py  footballdata_csv.py  footballdata_org.py  statsbomb_open.py  the_odds_api.py
src/pitchs_edge/ui/: _lib.py  app.py
tests/: test_backtest_metrics.py  test_devig.py  test_dixon_coles.py  test_kelly.py  test_recommend.py
web/: app.js  data.json  index.html  style.css
